Bug 514417 - Ledger Window Data Entries Screen Jumping In Reconcile Mode
Summary: Ledger Window Data Entries Screen Jumping In Reconcile Mode
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.2.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
: 514052 (view as bug list)
Depends on:
Blocks:
 
Reported: 2026-01-10 17:58 UTC by pc
Modified: 2026-01-26 16:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.2
Sentry Crash Report:


Attachments
Screencast kmymoney jumping reconcile screen (697.19 KB, video/webm)
2026-01-10 17:58 UTC, pc
Details
kmymoney jumping reconcile screenshots (974.82 KB, application/pdf)
2026-01-10 17:59 UTC, pc
Details
test_debug_03.kmy test file (2.43 KB, application/gzip)
2026-01-10 18:00 UTC, pc
Details
kmymoney jumping ledger sorting view setup (173.13 KB, application/pdf)
2026-01-12 18:02 UTC, pc
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pc 2026-01-10 17:58:03 UTC
Created attachment 188392 [details]
Screencast kmymoney jumping reconcile screen

SUMMARY
A slightly "odd" issue to report.

When I reconcile an account, when I click in the "C" column of an entry, I notice the entry ledger line jumps down and then returns to its original position.

In the "reconcile" operation, right at the top of the ledger and just below the column headings is a "Reconciliation" line with a "pink" background fill with the date and amount of the previously completed account reconciliation. The next line below this is a "Last Month" line with a "greenish" background fill.

What I observe is that every time I click in the "C" column of an entry new "Reconciliation" lines momentarily appear right at the top of the ledger, above the original "Reconciliation" and "Last Month" lines. These extra lines are the cause of the account ledger lines jumping down line and then returning to their original position. I suspect the that the number of "Reconciliation" lines that momentarily appear correspond to the number of previous account reconciliations.

I will try to upload a short screenshot video, and a PDF file with some individual video frame captures in a PDF file.

On further investigation what appears to be causing the issue is a combination of:
1. An account with at least 2 previous reconciliations. With only one previous reconciliation the issue does not show.
2. Having the KMyMoney ledger view option "Show all reconciliation entries with date and balance in ledger" set.

If I change the KMyMoney ledger view option to either of "Don't show reconciliation entries" or "Show last reconciliation entry with date and balance in ledger", the issue no longer occurs.

I used a slightly adulterated copy of my main data file for the video screen capture attached to this ticket. I could not at first reproduce this with a new data file starting from scratch. It was only in the process of collecting the data for this ticket that I was able to identify what was causing the issue. Since then I have created a KMyMoney test file "test_debug_03.kmy" that shows the issue. To see this issue in this file you need to:
1) Have the KMyMoney ledger view option "Show all reconciliation entries with date and balance in ledger" set.
2) Reconcile the "Checking Account". The test file already has two completed reconciliations for this account.

Part of the reason I am creating this ticket is that unexpected ledger items appearing and then disappearing might possibly be connected to the issue seen in bug 513777.

STEPS TO REPRODUCE
1. Have the KMyMoney ledger view option "Show all reconciliation entries with date and balance in ledger" set.
2. Use an account with at least 2 previous reconciliations. With only one previous reconciliation the issue does not show.
3. Reconcile the "Checking Account".
4. Change the reconcile status of entries by clicking in the "C" column of the account ledger view.

OBSERVED RESULT
The entries in the ledger view jump down and then back up again.

EXPECTED RESULT
The entries in the ledger view should not change, other than the entry in the "C" column.

SOFTWARE/OS VERSIONS
Observed in Windows 10
Observed in Linux using KMyMoney AppImage file: kmymoney-5.2-5096-linux-gcc-x86_64.AppImage

ADDITIONAL INFORMATION
Comment 1 pc 2026-01-10 17:59:46 UTC
Created attachment 188393 [details]
kmymoney jumping reconcile screenshots
Comment 2 pc 2026-01-10 18:00:31 UTC
Created attachment 188394 [details]
test_debug_03.kmy test file
Comment 3 Thomas Baumgart 2026-01-12 13:55:40 UTC
Do your ledger sort attributes contain the reconciliation status by any chance? Does the 'jumping' disappears when you take that away?
Comment 4 pc 2026-01-12 18:02:04 UTC
(In reply to Thomas Baumgart from comment #3)
> Do your ledger sort attributes contain the reconciliation status by any
> chance? Does the 'jumping' disappears when you take that away?

Thomas,

Regarding the "Reconcile state" item in the ledger sorting view setup:
It is set in "Normal View"
It is not set in "Reconcile View"
I will attach a PDF of settings screenshots as "kmymoney jumping ledger sorting view setup.pdf" to be sure this is the information you were requesting.

I did remove it from "Normal View" and with the ledger view option
"Show all reconciliation entries with date and balance in ledger"
set the screen was still jumping.
Comment 5 pc 2026-01-12 18:02:51 UTC
Created attachment 188447 [details]
kmymoney jumping ledger sorting view setup
Comment 6 Thomas Baumgart 2026-01-25 15:03:23 UTC
Git commit 92fea9aa51273429d7ab799c2278ed395d3fe6c8 by Thomas Baumgart.
Committed on 25/01/2026 at 15:02.
Pushed by tbaumgart into branch 'master'.

Improve repainting during reconciliation
FIXED-IN: 5.2.2

M  +5    -4    kmymoney/models/specialledgeritemfilter.cpp
M  +1    -0    kmymoney/mymoney/mymoneyenums.h
M  +5    -1    kmymoney/mymoney/storage/reconciliationmodel.cpp
M  +9    -1    kmymoney/mymoney/storage/reconciliationmodel.h
M  +5    -1    kmymoney/views/reconciliationdelegate.cpp

https://invent.kde.org/office/kmymoney/-/commit/92fea9aa51273429d7ab799c2278ed395d3fe6c8
Comment 7 Thomas Baumgart 2026-01-25 16:44:38 UTC
Git commit 43124fe956f682654832b79b28749f3d8cc941ea by Thomas Baumgart.
Committed on 25/01/2026 at 15:03.
Pushed by tbaumgart into branch '5.2'.

Improve repainting during reconciliation
FIXED-IN: 5.2.2
(cherry picked from commit 92fea9aa51273429d7ab799c2278ed395d3fe6c8)

M  +5    -4    kmymoney/models/specialledgeritemfilter.cpp
M  +1    -0    kmymoney/mymoney/mymoneyenums.h
M  +5    -1    kmymoney/mymoney/storage/reconciliationmodel.cpp
M  +9    -1    kmymoney/mymoney/storage/reconciliationmodel.h
M  +5    -1    kmymoney/views/reconciliationdelegate.cpp

https://invent.kde.org/office/kmymoney/-/commit/43124fe956f682654832b79b28749f3d8cc941ea
Comment 8 Paul Worrall 2026-01-26 16:32:37 UTC
*** Bug 514052 has been marked as a duplicate of this bug. ***