Improve repainting during reconciliation

BUG: 514417
FIXED-IN: 5.2.2