kmymoney/mymoney/mymoneyenums.h
@@ -692,6 +692,7 @@ enum Roles {
     ReconciliationAmountRole, // the reconciliation balance as MyMoneyMoney object
     ReconciliationBalanceRole, // the reconciliation balance as formatted string
     ReconciliationFilterHintRole, // filtering hint for the entry
+    ReconciliationCurrentRole, // set for current reconciliation entry
 
     // General state
     ClosedRole,
